[package]
name = "atproto-link-aggregator"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
flume = { version = "0.11.1", default-features = false }
futures-util = "0.3.31"
redb = "2.2.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
zstd = "0.13.2"

[dependencies.tokio]
version = "1.41"
features = ["full"]

[dependencies.tungstenite]
version = "0.24"
features = ["native-tls"]
